[project]
name = "tour-agency"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "jinja2>=3.1.6",
    "orjson>=3.11.3",
    "pydantic-settings>=2.10.1",
    "pydantic[email]>=2.11.7",
    "redis>=6.4.0",
    "requests>=2.32.5",
    "uvicorn>=0.35.0",
]
